--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="dist/analytics.js" defer></script>
     <script src="dist/WorkingWithClassesAndInterfaces.js" defer></script>
     <script src="dist/interfaces.js" defer></script>
-    <script src="dist/Advancetypes.js"></script>
+    <script src="dist/Advancetypes.js" defer></script>
+    <script src="dist/Generic.js" defer></script>
   </head>
   <body>
     <input type="text" id="userInput" />
